# flash-attn-volta

./: .gitignore  PERF.md  PLAN.md  PLAN_BACKWARD.md  PUBLISHED.md  README.md  REAL_MODEL.md  RESEARCH.md  RESULTS.md  TASK.md  VERIFY.md  pyproject.toml
bench/: attn_layer_memory.py  backward.py  backward_real_model.py  bench.py  ceiling.py  memory.py  real_model.py  stability.py
flash_attn_volta/: __init__.py  autograd.py  patch_hf.py  ref.py  triton_fa.py  triton_fa_bwd.py
probes/: probe_bundled_fa.py  probe_d128_debug.py  probe_d32_debug.py  probe_fa_smoke.py  probe_matmul_kdim.py  probe_num_stages1.py  probe_perf_sweep.py  probe_perf_sweep_d128.py  probe_triton.py
results/: attn_layer_memory.json  backward_bench.json  backward_real_model.json  bench.json  ceiling.json  correctness.json  memory.json  real_model_bench.json  stability.json
scripts/: hf_push_dataset.py  run_verify.sh
tests/: test_backward.py  test_backward_real_model.py  test_correctness.py  test_real_model.py
